Changelog
=========

Unreleased
----------

* Plone 4.3 compatiblity [tdesvenain]

0.4.1 (2012-11-26)
------------------

* update changelog, release [gyst]
* update travis config to new buildout [gyst]
* provide a virtualenv-enabled Travis buildout that can be debugged on a dev box [gyst]
* Added l10n for English and Dutch for plone domain [macagua]
* Updated Spanish l10n [macagua]
* Updated sync i18n script with plone domain, added i18n for portlets, Generic Setup register Profile [macagua]
* Updated changelog contributors files and sync i18n script with plone domain, added i18n for portlets, Generic Setup register Profile [macagua]
* Makefile changes [avelino]
* pep8 and cleanups [avelino]
* pep8/pyflakes [gyst]
* update Travis CI configuration to include pep8/pyflakes testing [hvelarde]
* update location of extended configuration as the plonetest repo was moved to GitHub [hvelarde]
* update list of ignored objects [hvelarde]
* update doc, bump version [gyst]
* cleanup buildout [gyst]
* add Travis CI configuration [hvelarde]


0.4 (2012-10-09)
----------------

* .gitignores [gyst]
* update docs [gyst]
* fix dependency [gyst]
* reindent for better pep8 [gyst]
* s/_flush_queue/flush_queue/ [gyst]
* more styling [gyst]
* style status form [gyst]
* ignore compiled i18n stuff [gyst]
* document mentions todo [gyst]
* strip interpunction from tag index [gyst]
* refactor into re-usable status input provider [gyst]
* protect against site errors on (partial) uninstalls [gyst]
* GS name [gyst]
* implement hashtag filtering [gyst]
* pep8 [gyst]
* version bump to 0.4 [gyst]
* Fix pep8 [avelino]
* add help (tag) in make file [avelino]

0.3 (2012-05-21)
----------------

* update changelog [gyst]
* permission rename s/Read/View/ [gyst]
* use accesscontrols in portlets [gyst]
* disable accesscontrol in lowlevel unittests [gyst]
* add access controls [gyst]
* remove old plone.app.discussion compatibility view [gyst]