@@ -4,6 +4,10 @@ Changelog
 Unreleased
 ----------
 
+* If the status is added within a microblog context,
+  store this context so that we are able to filter on context.
+  [tdesvenain]
+
 * Plone 4.3 compatiblity [tdesvenain]
 
 0.4.1 (2012-11-26)
